# mlops-loan-prediction

./: .gitignore  README.md  build.ps1  push.ps1  pyproject.toml  requirements.dev.txt
notebooks/: feat_eng.ipynb  model.ipynb
scripts/ps/: Install-Poetry.ps1  build.ps1  push.ps1
scripts/python/: create_db_objects.py  mlflow-demo.py  mlflow-model.py
src/backend/: endpoint.py  main.py
src/frontend/: app.py
src/mlops/backend/control/: config.py
src/mlops/backend/logistic_regression/: train_model.py
src/mlp/backend/logistic_regression/: predict.py
src/mlp/backend/utilities/: sql.py
src/model/: transformers.py
src/model/logistic_regression/: config.py  evaluation.py  pipeline.py  predict.py  prediction.py  preprocessing.py  train_model.py  training.py
src/model/logistic_regression/archive/: preprocessing.py  train_model.py
